--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
     </p>
 <!-- ===== Footer ===== -->
 <footer class="text-center">
-  &copy; <span id="year"></span> — Jamshitov Davlat tomonidan yaratilgan
+  &copy; <span id="year"></span> — Novaprint 2025
 </footer>
 
 <!-- ===== Skriptlar ===== -->
