--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3"><div class="container">&copy; 2025 Jamshitov Davlat tomonidan yasalgan</div></footer>
+  <footer class="bg-dark text-white text-center py-3"><div class="container">&copy; 2025 Novaprint</div></footer>
 
   <!-- MODAL TEMPLATI -->
   <script id="modal-tpl" type="text/template">
