--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
 <footer class="bg-dark text-white text-center py-3">
     <div class="container">
-        &copy; <span id="year"></span> Jamshitov Davlat tomonidan yasalgan
+        &copy; <span id="year"></span> 2025 Nova Print
     </div>
 </footer>
 
