--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
-            &copy; 2025 Jamshitov Davlat tomonidan yasaldi.
+            &copy; 2025 Novaprint
         </div>
     </footer>
 
