--- a/catalog.html
+++ b/catalog.html
@@ -38,6 +38,7 @@
         <div class="col-md-4"><div class="card h-100" data-bs-toggle="modal" data-bs-target="#modal-letter"><img src="assets/img/letter/main.jpg" class="card-img-top" alt="Harflar"><div class="card-body"><h5 class="card-title">Obyomli harflar</h5><p class="card-text">LED yoki oddiy bukvalar</p></div></div></div>
         <div class="col-md-4"><div class="card h-100" data-bs-toggle="modal" data-bs-target="#modal-print"><img src="assets/img/print/main.jpg" class="card-img-top" alt="Print"><div class="card-body"><h5 class="card-title">Bosma mahsulotlar</h5><p class="card-text">Vizitka, flayer, buklet…</p></div></div></div>
         <div class="col-md-4"><div class="card h-100" data-bs-toggle="modal" data-bs-target="#modal-logo"><img src="assets/img/logo/main.jpg" class="card-img-top" alt="Logo"><div class="card-body"><h5 class="card-title">Logo dizayn</h5><p class="card-text">Logotip va brend‑kit</p></div></div></div>
+        
       </div>
     </div>
   </section>
@@ -70,6 +71,7 @@
       { id:'modal-banner',  title:'Banner / Orakal', rows:[['Banner (1 m²)','45 000 so‘m','Banner'],['Orakal (1 m²)','55 000 so‘m','Orakal'],['Setka (1 m²)','65 000 so‘m','Setka']]},
       { id:'modal-print',   title:'Bosma mahsulotlar', rows:[['Vizitka oddiy','700 so‘m','Vizitka oddiy'],['Vizitka laminat','1 000 so‘m','Vizitka laminat'],['Flayer','950 so‘m','Flayer'],['Flayer +3000','450 so‘m','Buklet A4']]},
       { id:'modal-logo',    title:'Logo dizayn', rows:[['Basic','200 000 so‘m','Logo basic'],['Standard','350 000 so‘m','Logo standard'],['Premium','600 000 so‘m','Logo premium'],['Dizayn soati','200 000 so‘m','Logo premium']]},
+      { id:'modal-3d',    title:'Obyomni bukvalr', rows:[100 000 so‘m']}
     ];
 
     const tpl = document.getElementById('modal-tpl').innerHTML;
