--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,7 @@
       { id:'modal-banner',  title:'Banner / Orakal', rows:[['Banner (1 m²)','45 000 so‘m','Banner'],['Orakal (1 m²)','55 000 so‘m','Orakal'],['Setka (1 m²)','65 000 so‘m','Setka']]},
       { id:'modal-print',   title:'Bosma mahsulotlar', rows:[['Vizitka oddiy','700 so‘m','Vizitka oddiy'],['Vizitka laminat','1 000 so‘m','Vizitka laminat'],['Flayer','950 so‘m','Flayer'],['Flayer +3000','450 so‘m','Buklet A4']]},
       { id:'modal-logo',    title:'Logo dizayn', rows:[['Basic','200 000 so‘m','Logo basic'],['Standard','350 000 so‘m','Logo standard'],['Premium','600 000 so‘m','Logo premium'],['Dizayn soati','200 000 so‘m','Logo premium']]},
-      { id:'modal-3d',    title:'Obyomni bukvalr', rows:[100 000 so‘m']}
+      { id:'modal-letter',    title:'Obyomni bukvalr', rows:[100 000 so‘m']}
     ];
 
     const tpl = document.getElementById('modal-tpl').innerHTML;
