--- a/catalog.html
+++ b/catalog.html
@@ -38,13 +38,12 @@
         <div class="col-md-4"><div class="card h-100" data-bs-toggle="modal" data-bs-target="#modal-letter"><img src="assets/img/letter/main.jpg" class="card-img-top" alt="Harflar"><div class="card-body"><h5 class="card-title">Obyomli harflar</h5><p class="card-text">LED yoki oddiy bukvalar</p></div></div></div>
         <div class="col-md-4"><div class="card h-100" data-bs-toggle="modal" data-bs-target="#modal-print"><img src="assets/img/print/main.jpg" class="card-img-top" alt="Print"><div class="card-body"><h5 class="card-title">Bosma mahsulotlar</h5><p class="card-text">Vizitka, flayer, buklet…</p></div></div></div>
         <div class="col-md-4"><div class="card h-100" data-bs-toggle="modal" data-bs-target="#modal-logo"><img src="assets/img/logo/main.jpg" class="card-img-top" alt="Logo"><div class="card-body"><h5 class="card-title">Logo dizayn</h5><p class="card-text">Logotip va brend‑kit</p></div></div></div>
-        
       </div>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3"><div class="container">&copy; 2025 Novaprint</div></footer>
+  <footer class="bg-dark text-white text-center py-3"><div class="container">&copy; 2025 Jamshitov Davlat tomonidan yasalgan</div></footer>
 
   <!-- MODAL TEMPLATI -->
   <script id="modal-tpl" type="text/template">
@@ -62,37 +61,53 @@
   </script>
 
   <!-- DATA & RENDER -->
-  <script>
-    const tg = "https://t.me/Novaa_print?text=";
-    const modals = [
-      { id:'modal-shtender', title:'Shtenderlar', rows:[['120×80 sm','250 000 so‘m','Shtender 120x80'],['100×150 sm','350 000 so‘m','Shtender 100x150'],['Metall karkas','650 000 so‘m','Shtender metall']]},
-      { id:'modal-bayroq',  title:'Bayroqlar', rows:[['400×70 sm','750 000 so‘m','Bayroq 340x70'],['340×70 sm','700 000 so‘m','Bayroq 250x70'],['250×70 sm','600 000 so‘m','Bayroq 150x300']]},
-      { id:'modal-merch',   title:'Merch pechati', rows:[['Futbolka A5','30 000 so‘m','Futbolka A5'],['Futbolka A4','50 000 so‘m','Futbolka A4'],['Kepka','30 000 so‘m','Kepka'],['Bakal','60 000 so‘m','Bakal'],['Bakal termo','70 000 so‘m','Bakal']]},
-      { id:'modal-banner',  title:'Banner / Orakal', rows:[['Banner (1 m²)','45 000 so‘m','Banner'],['Orakal (1 m²)','55 000 so‘m','Orakal'],['Setka (1 m²)','65 000 so‘m','Setka']]},
-      { id:'modal-print',   title:'Bosma mahsulotlar', rows:[['Vizitka oddiy','700 so‘m','Vizitka oddiy'],['Vizitka laminat','1 000 so‘m','Vizitka laminat'],['Flayer','950 so‘m','Flayer'],['Flayer +3000','450 so‘m','Buklet A4']]},
-      { id:'modal-logo',    title:'Logo dizayn', rows:[['Basic','200 000 so‘m','Logo basic'],['Standard','350 000 so‘m','Logo standard'],['Premium','600 000 so‘m','Logo premium'],['Dizayn soati','200 000 so‘m','Logo premium']]},
-      { id:'modal-letter',    title:'Obyomni bukvalr', rows:[100 000 so‘m']}
-    ];
+ <!-- DATA & RENDER -->
+<script>
+  const tg = "https://t.me/Novaa_print?text=";
+  const modals = [
+    { id:'modal-shtender', title:'Shtenderlar', rows:[['120×80 sm','250 000 so‘m','Shtender 120x80'],['100×150 sm','350 000 so‘m','Shtender 100x150'],['Metall karkas','650 000 so‘m','Shtender metall']]},
+    { id:'modal-bayroq',  title:'Bayroqlar', rows:[['400×70 sm','750 000 so‘m','Bayroq 340x70'],['340×70 sm','700 000 so‘m','Bayroq 250x70'],['250×70 sm','600 000 so‘m','Bayroq 150x300']]},
+    { id:'modal-merch',   title:'Merch pechati', rows:[['Futbolka A5','30 000 so‘m','Futbolka A5'],['Futbolka A4','50 000 so‘m','Futbolka A4'],['Kepka','30 000 so‘m','Kepka'],['Bakal','60 000 so‘m','Bakal'],['Bakal termo','70 000 so‘m','Bakal']]},
+    { id:'modal-banner',  title:'Banner / Orakal', rows:[['Banner (1 m²)','45 000 so‘m','Banner'],['Orakal (1 m²)','55 000 so‘m','Orakal'],['Setka (1 m²)','65 000 so‘m','Setka']]},
+    { id:'modal-print',   title:'Bosma mahsulotlar', rows:[['Vizitka oddiy','700 so‘m','Vizitka oddiy'],['Vizitka laminat','1 000 so‘m','Vizitka laminat'],['Flayer','950 so‘m','Flayer'],['Flayer +3000','450 so‘m','Buklet A4']]},
+    { id:'modal-logo',    title:'Logo dizayn', rows:[['Basic','200 000 so‘m','Logo basic'],['Standard','350 000 so‘m','Logo standard'],['Premium','600 000 so‘m','Logo premium'],['Dizayn soati','200 000 so‘m','Logo premium']]},
+    { id:'modal-letter',  title:'3D harflar', rows:[['','','3D harflar']]} // faqat buyurtma
+  ];
 
-    const tpl = document.getElementById('modal-tpl').innerHTML;
-    const container = document.createElement('div');
+  const tpl = document.getElementById('modal-tpl').innerHTML;
+  const container = document.createElement('div');
 
-    modals.forEach(m => {
-      let rowsHtml = '<table class="table table-dark table-bordered"><thead><tr><th>Variant</th><th>Narx</th><th></th></tr></thead><tbody>';
+  modals.forEach(m => {
+    let rowsHtml = '';
+
+    if (m.id === 'modal-letter') {
+      // Faqat tugma ko‘rsatiladi
+      rowsHtml = `<div class="text-center">
+        <a target="_blank" href="${tg}${encodeURIComponent(m.rows[0][2])}" class="btn btn-lg btn-warning">Buyurtma berish</a>
+      </div>`;
+    } else {
+      // Jadval ko‘rinishida xizmatlar
+      rowsHtml = '<table class="table table-dark table-bordered"><thead><tr><th>Variant</th><th>Narx</th><th></th></tr></thead><tbody>';
       m.rows.forEach(r => {
         rowsHtml += `<tr><td>${r[0]}</td><td>${r[1]}</td><td><a target="_blank" href="${tg}${encodeURIComponent(r[2])}" class="btn btn-sm btn-warning">Buyurtma</a></td></tr>`;
       });
       rowsHtml += '</tbody></table>';
-      let html = tpl.replace('{{id}}', m.id).replace('{{title}}', m.title).replace('{{{body}}}', rowsHtml);
-      container.insertAdjacentHTML('beforeend', html);
-    });
+    }
 
-    document.body.appendChild(container);
-  </script>
+    const html = tpl
+      .replace('{{id}}', m.id)
+      .replace('{{title}}', m.title)
+      .replace('{{{body}}}', rowsHtml);
+
+    container.insertAdjacentHTML('beforeend', html);
+  });
+
+  document.body.appendChild(container);
+</script>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-</body>
