--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
 
 <!-- ===== Footer ===== -->
 <footer class="text-center py-3">
-  &copy; <span id="year"></span> — Jamshitov Davlat tomonidan yaratilgan
+  &copy; <span id="year"></span> — NOVA PRINT reklama agenligi
 </footer>
 
 <!-- ===== Skriptlar ===== -->
