--- a/catalog.html
+++ b/catalog.html
@@ -130,7 +130,7 @@
   <!-- FOOTER -->
   <footer class="bg-dark text-white text-center py-3">
     <div class="container">
-      &copy; 2025 Jamshitov Davlat tomonidan yasalgan
+      &copy; 2025 NOVA PRINT reklama agenligi
     </div>
   </footer>
 
