--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 </section>
 
 <footer class="bg-dark text-white text-center py-3">
-  <div class="container">
-      &copy; 2025 NOVA PRINT reklama agenligi
+  <div class="container"> 2025 NOVA PRINT reklama agenligi
   </div>
 </footer>
 
