--- a/about_ru.html
+++ b/about_ru.html
@@ -107,7 +107,7 @@
 
 <!-- ===== Footer ===== -->
 <footer class="text-center py-3">
-  &copy; <span id="year"></span> — Создано Джамшитовым Давлатом
+  &copy; 2025 Рекламное агентство NOVA PRINT
 </footer>
 
 <!-- ===== Скрипты ===== -->
